// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Links/> should call actions when adding a link 1`] = `
[
  [
    "template.path.meta.custom.links",
  ],
]
`;

exports[`<Links/> should call actions when adding a link 2`] = `
[
  [
    [
      {
        "label": "Gorgias",
        "url": "www.gorgias.com",
      },
    ],
  ],
]
`;

exports[`<Links/> should call all actions when removing a link 1`] = `
[
  [
    "template.path.meta.custom.links",
    [
      "template",
      "absolute",
      "path",
    ],
  ],
]
`;

exports[`<Links/> should call all actions when removing a link 2`] = `
[
  [
    "template.path.meta.custom.links",
  ],
]
`;

exports[`<Links/> should call all actions when removing a link 3`] = `
[
  [
    [
      {
        "label": "Gorgias-1",
        "url": "okok",
      },
    ],
  ],
]
`;

exports[`<Links/> should call only \`removeEditedWidget\` action when removing the last link 1`] = `
[
  [
    "template.path.meta.custom.links",
    [
      "template",
      "absolute",
      "path",
    ],
  ],
]
`;

exports[`<Links/> should call only \`removeEditedWidget\` action when removing the last link 2`] = `[]`;

exports[`<Links/> should call only \`removeEditedWidget\` action when removing the last link 3`] = `[]`;

exports[`<Links/> should call widget actions when editing a link 1`] = `
[
  [
    "template.path.meta.custom.links",
  ],
]
`;

exports[`<Links/> should call widget actions when editing a link 2`] = `
[
  [
    [
      {
        "label": "Gorgias-0",
        "url": "okok",
      },
    ],
  ],
]
`;

exports[`<Links/> should render an empty component (no links, no button) 1`] = `<div />`;
